# ira-utils

./: .gitignore  .pre-commit-config.yaml  README.md  channels.txt  main.py  pyproject.toml  settings.py  videos.txt
.github/workflows/: push.yaml  tests.yaml
antikremlebot/: __init__.py  bot_list.py
gui/: __init__.py  gui.py
statistics/: __init__.py  statistics.py
tests/statistics/: test_statistics.py
utils/t30p/: README.md  setup.py  t30p.py
youtube/: __init__.py  comment.py  youtube.py
