[tool.poetry]
name = "ira-utils"
version = "0.1.0"
description = "ira utils"
authors = ["mihalin <stopa3.10.1996@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.2"
python-dotenv = "^0.15.0"
tkcalendar = "^1.6.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.0"
pre-commit = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
